fix caurosal overlap

--- a/css/style.css
+++ b/css/style.css
@@ -591,13 +591,13 @@ main .site-content .post-content > .post-image .post-info{
             width:62.5%;
             height:10%
         }
+    }
+
+@media only screen and (max-height: 620px){
     main .blog-container{
-        margin-top: 15vh;
-
+        margin-top: 30vh !important;
     }
-    }
-
-
+}
 /* viewoprt less than or equal to 750px */
 @media only screen and (max-width: 750px){
     .nav .nav-menu, .nav-items{
